# stdio-mgr

./: .coveragerc  .gitignore  .travis.yml  AUTHORS.md  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  azure-job.yml  azure-pipelines.yml  black  black.bat  conftest.py  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements-doc.txt  requirements-flake8.txt  requirements-travis.txt  setup.py  tests.py  tox.ini
.github/workflows/: all_core_tests.yml  publish_test_pypi.yml  release_platform_tests.yml  release_sdist_test.yml  release_testdir_coverage.yml
doc/: make.bat
doc/source/: api.rst  attr_inheritance.rst  attr_origins.py  conf.py  index.rst  inheritance.rst  method_inheritance.rst  userguide.rst
doc/source/inherit/: stdiomanager.rst  teestdin.rst
src/stdio_mgr/: __init__.py  compat.py  stdio_mgr.py  triple.py  types.py  version.py
stdio_mgr/: __init__.py  stdio_mgr.py
stdio_mgr/test/: stdio_mgr_base.py
tests/: __init__.py  stdio_mgr_base.py  test_stdiomgr_base.py  test_triple.py  test_types.py
tests/micropython/: test_micropython.py
