[build-system]
requires = [
    "wheel",
    "setuptools>77",
]
build-backend = "setuptools.build_meta"

[project]
name = "stdio-mgr"
description = "Context manager for mocking/wrapping stdin/stdout/stderr"

[tool.black]
line-length = 88
include = '''
(
    ^/tests/
  | ^/src/stdio_mgr/
  | ^/setup[.]py
  | ^/conftest[.]py
)
'''
exclude = '''
(
    __pycache__
)
'''